--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30%;
+    width: 100%;
     margin: 2rem;
 }
 
@@ -68,7 +68,7 @@ main {
     padding: 0.5rem 0;
 }
 
-.recipe img {
+#recipe-image {
     width: 100%;
     border-radius: 50%;
     margin: 1rem;
