--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 
-.App {
+#root {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(240, 255, 241);
 }
