--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,6 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(240, 255, 241);
+    width: 100vw;
+    height: 100vh;
 }
