--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -1,7 +1,11 @@
 .favorite {
     width: 100%;
-    height: 100%;
+    height: min-content;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+
+    button {
+        margin: 1rem;
+    }
 }
