--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,3 +1,9 @@
 .filter {
-    margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0.5rem;
+
+    label {
+        text-align: left;
+    }
 }
