--- a/src/pages/Search/Search.module.scss
+++ b/src/pages/Search/Search.module.scss
@@ -2,23 +2,40 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
 
-  label, input {
-    padding: 0.5rem 0;
-    text-align: center;
-    width: 75%;
+  .searchbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    input {
+      margin-bottom: 1rem;
+      padding: 0.5rem 0;
+      width: 50%;
+      text-align: center;
+    }
+  
+    label {
+      // align-self: start;
+      text-align: left;
+    }
   }
 
   .filters {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    width: 100vw;
   }
 
   .getRecipes {
     margin: 1rem 0;
     padding: 0.5rem 0;
-    width: 70%;
+    width: 30%;
     border: none;
     border-radius: 0.5rem;
     background-color: brown;
@@ -33,9 +50,10 @@
 }
 
 .favorites {
-  margin: 1rem 0;
+  align-self: flex-end;
+  margin-bottom: 1rem ;
   padding: 0.5rem 0;
-  width: 20%;
+  width: 10%;
   border: none;
   border-radius: 0.5rem;
   background-color: gold;
