--- a/src/components/Recipe/Recipe.module.scss
+++ b/src/components/Recipe/Recipe.module.scss
@@ -10,7 +10,11 @@
   border-radius: 1rem 0 1rem;
 
   h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 90%;
+    height: 4.5rem;
     font-size: 1rem;
     text-align: center;
     padding: 1rem 0 0;
@@ -21,7 +25,6 @@
     position: relative;
     width: 14rem;
     height: 14rem;
-    // border: 1rem solid white;
     margin: 1rem;
     display: flex;
     justify-content: center;
