--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-body::-webkit-scrollbar {
-    display: none;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
