--- a/src/components/Ingredients/Ingredients.module.scss
+++ b/src/components/Ingredients/Ingredients.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
+    width: 90%;
     margin: 1rem;
 
     h1 {
@@ -14,33 +14,34 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        align-items: center;
         width: 100%;
         background-color: white;
         padding: 2rem;
         border-radius: 2rem 0 2rem;
         box-shadow: 0.5rem 0.75rem 2rem -1.5rem black;
 
-
         .ingredient {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            height: 13rem;
+            height: 14rem;
             width: 16%;
+            min-width: 9rem;
             text-align: center;
             margin: 1rem;
             padding: 0.5rem;
             border: 2px dashed rgb(137, 216, 255);
-            border-radius: 1rem;
-
+            border-radius: 1rem 0 1rem;
+            box-shadow: 0.5rem 0.75rem 1rem -0.5rem rgb(137, 216, 255);
+    
             p {
                 font-weight: bold;
             }
-
+    
             img {
                 width: 7rem;
+                max-height: 9rem;
             }
         }
     }
