--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -1,11 +1,35 @@
 .favorite {
-    width: 100%;
-    height: min-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    width: 100%;
+    height: min-content;
+    padding-top: 3rem;
 
     button {
-        margin: 1rem;
+        position: absolute;
+        top: 1rem;
+        right: 2rem;
+        height: 3rem;
+        width: 3rem;
+        border: none;
+        border-radius: 50%;
+        background-color: transparent;
+
+        svg {
+            height: 3rem;
+            width: 3rem;
+            
+            polygon {
+                fill: gray;
+            }
+        }
+
+        &:hover {
+            svg > polygon {
+                fill: rgb(137, 216, 255);
+            }
+        }
     }
 }
