--- a/src/components/Nutrition/Nutrition.module.scss
+++ b/src/components/Nutrition/Nutrition.module.scss
@@ -1,8 +1,7 @@
 .nutrition {
     position: relative;
-    width: 100%;
     margin: 2rem 0 0;
-    padding: 2rem 4rem;
+    padding: 2.5rem 4rem 1.5rem;
     font-size: 1rem;
     color: black;
     background-color: #fff;
