--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,22 @@ body {
   width: 100vw;
   overflow-x: hidden;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(240, 255, 241);
+  width: 100%;
+  min-height: 100vh;
+}
+
+.Show {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+
+  label {
+    margin-right: 0.5rem;
+  }
+}
