--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,10 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: center;
   width: 100%;
-  height: 2rem;
-  background-color: #333;
+  height: 3rem;
+  background-color: #29a64d;
   color: white;
   padding: 0 2rem;
 
@@ -12,13 +12,14 @@
     list-style: none;
     display: flex;
     gap: 1rem;
+    height: 100%;
   }
 
-  li.active {
-    background-color: #555;
+  a.active {
+    background-color: #2db353;
   }
-  li:hover {
-    background-color: #777;
+  a:hover {
+    background-color: #238c41;
   }
 }
 
@@ -28,5 +29,5 @@ a {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0.25rem;
+  padding: 1rem;
 }
