--- a/src/components/Nutrition/Nutrition.module.scss
+++ b/src/components/Nutrition/Nutrition.module.scss
@@ -1,6 +1,6 @@
 .nutrition {
   position: relative;
-  width: 100%;
+  width: 90%;
   margin: 2rem 0 0;
   padding: 2rem 4rem;
   font-size: 1rem;
@@ -19,6 +19,7 @@
     top: 2rem;
     right: 4.5rem;
     font-weight: bold;
+    background-color: transparent;
 
     &:hover {
       background-color: black;
