--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(240, 255, 241);
+  background-color: #d0f4da;
   width: 100%;
   min-height: 100vh;
 }
