--- a/src/pages/Search/Search.module.scss
+++ b/src/pages/Search/Search.module.scss
@@ -5,41 +5,51 @@
   text-align: center;
   width: 100%;
   padding: 1rem 1.5rem;
+
   .searchbar {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 100vw;
+
     input {
       margin-bottom: 1rem;
       padding: 0.5rem 0;
       width: 50%;
       text-align: center;
     }
+
     label {
       // align-self: start;
       text-align: left;
     }
   }
+
   .filters {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100vw;
   }
+
   .getRecipes {
     margin: 1rem 0;
     padding: 0.5rem 0;
     width: 30%;
     min-width: min-content;
     border: none;
-    border-radius: 0.5rem;
-    background-color: #a52a2a;
+    border-radius: 0.5rem 0 0.5rem;
+    background-color: #2db353;
     text-transform: uppercase;
     color: white;
+
     &:hover {
       cursor: pointer;
-      background-color: #8c2323;
+      background-color: #238c41;
     }
+  }
+
+  p {
+    margin-bottom: -2.2rem;
   }
 }
