--- a/src/pages/MealPlanner/MealPlanner.module.scss
+++ b/src/pages/MealPlanner/MealPlanner.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem 2rem;
 
   h1 {
     margin-bottom: 1rem;
