--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -1,5 +1,6 @@
 .calendar {
   width: 100%;
+  // position: relative;
 
   .weekNav {
     display: flex;
@@ -39,16 +40,26 @@
       }
 
       .dayName {
+        position: relative;
         height: 10%;
         font-size: 1.5rem;
         background-color: #29a64d;
         color: white;
         padding: 1rem 0 0.5rem;
+
+        .line {
+          position: absolute;
+          bottom: -0.25rem;
+          align-self: center;
+          width: 75%;
+          height: 0.25rem;
+          background-color: #d0f4da;
+        }
       }
 
       .dayNumber {
         // height: 10%;
-        font-size: 3rem;
+        font-size: 3.5rem;
         font-weight: bold;
         padding: 0.5rem 0;
         background-color: white;
@@ -78,6 +89,28 @@
             outline: 1px solid black;
             transform: scale(1.2);
           }
+        }
+      }
+
+      .newDiv {
+        position: absolute;
+        width: max-content;
+        // border: 1px solid black;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 99;
+        background-color: rgba(128, 128, 128, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .addCard {
+          width: 50%;
+          height: 50%;
+          background-color: white;
         }
       }
     }
