--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -97,7 +97,7 @@
         width: max-content;
         // border: 1px solid black;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -110,15 +110,21 @@
         .addCard {
           position: relative;
           width: 75%;
-          height: 75%;
+          max-height: 75vh;
+          // height: max-content;
+          // height: 25%;
           padding: 1rem;
           background-color: white;
           display: flex;
           flex-direction: column;
           justify-content: flex-start;
+          border-radius: 2rem 0 2rem;
+          overflow: scroll;
+          overflow-x: hidden;
 
           p {
-            padding-bottom: 1rem;
+            margin-bottom: 0.5rem;
+            line-height: 1.5rem;
 
             span {
               font-size: 2rem;
@@ -126,29 +132,132 @@
             }
           }
 
-          input {
-            padding: 0.25rem;
+          form {
+            display: flex;
+            width: 30%;
+            // height: 2rem;
+            justify-content: space-between;
+            align-items: center;
             border: 2px solid black;
+            border-radius: 0.5rem 0 0.5rem;
+            padding: 0.25rem 0.5rem;
+            // margin-bottom: 0.5rem;
+            transition: all 0.75s ease-in-out;
+
+            input {
+              // height: 2rem;
+              line-height: 1rem;
+              width: 100%;
+              padding: 0.25rem;
+              border: none;
+              outline: none;
+              text-align: center;
+            }
+
+            button {
+              width: 1.5rem;
+              height: 1.5rem;
+              background-color: transparent;
+              border: none;
+
+              &:hover {
+                cursor: pointer;
+              }
+
+              svg {
+                width: 100%;
+                height: 100%;
+                fill: #000000;
+                background-color: transparent;
+              }
+            }
+
+            &:focus-within {
+              width: 75%;
+            }
           }
 
           .recipesMP {
-            height: min-content;
+            height: 75%;
             display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            margin-top: 0.5rem;
+            transition: all 0.5s ease-in-out;
 
             .recipeMP {
+              height: min-content;
+              width: 10rem;
               display: flex;
               flex-direction: column;
-              width: 30%;
+              // align-items: center;
+              justify-content: space-between;
+              padding-top: 0.5rem;
+
+              p {
+                // width: 150%;
+                text-align: center;
+                margin: 0;
+              }
 
               .imageMP {
-                width: 100%;
+                position: relative;
+                width: 8rem;
+                height: 8rem;
                 overflow: hidden;
+                border: 0.25rem dashed #29a64d;
+                border-radius: 50%;
 
                 img {
-                  width: 125%;
+                  transform: scale(0.65);
+                }
+
+                button {
+                  svg {
+                    display: none;
+                    position: absolute;
+                    top: 35%;
+                    left: 35%;
+                    width: 30%;
+                    height: 30%;
+
+                    path {
+                      fill: rgba(255, 255, 255, 0.8);
+                    }
+                  }
+
+                  &:hover {
+                    cursor: pointer;
+
+                    svg {
+                      top: 30%;
+                      left: 30%;
+                      width: 40%;
+                      height: 40%;
+
+                      path {
+                        fill: #29a64d;
+                      }
+                    }
+                  }
+                }
+
+                &:hover {
+                  border: 0.25rem solid #29a64d;
+
+                  svg {
+                    display: block;
+                  }
                 }
               }
             }
+          }
+
+          hr {
+            width: 100%;
+            border: 1px solid black;
+            margin: 1rem 0;
           }
 
           .exitbtn {
@@ -171,6 +280,31 @@
               font-weight: bold;
             }
           }
+
+          &::-webkit-scrollbar {
+            width: 0.5em;
+          }
+
+          &::-webkit-scrollbar-track {
+            background-color: transparent;
+            margin: 1rem 0 2.5rem;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background-color: #29a64d;
+            border-radius: 0.25rem;
+            height: 2rem;
+          }
+
+          // &::-webkit-scrollbar-track-piece:start {
+          //   background: transparent;
+          //   margin-top: 2rem;
+          // }
+
+          // &::-webkit-scrollbar-track-piece:end {
+          //   background: transparent;
+          //   margin-bottom: 2rem;
+          // }
         }
       }
     }
