calendar sync with users week meal plan

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -1,13 +1,16 @@
 .calendar {
   width: 100%;
+  height: 100%;
+  // min-height: 100vh;
   // position: relative;
 
   .weekNav {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 
     .monthName {
+      display: flex;
       font-size: 2.5rem;
       text-transform: uppercase;
       font-weight: bold;
@@ -21,16 +24,15 @@
   ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    height: 70vh;
-    margin-top: 1rem;
+    height: 90%;
+    // margin-top: 1rem;
     // border: 0.25rem solid #29a64d;
 
     li {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       width: calc(100% / 7);
+      height: 100%;
 
       div {
         width: 100%;
@@ -49,7 +51,7 @@
 
         .line {
           position: absolute;
-          bottom: -0.25rem;
+          bottom: 0;
           align-self: center;
           width: 75%;
           height: 0.25rem;
@@ -64,14 +66,22 @@
         padding: 0.5rem 0;
         background-color: white;
         border: 0.75rem solid #29a64d;
-        margin-bottom: 0.5rem;
+        // margin-bottom: 0.5rem;
       }
 
       .breakfast,
       .lunch,
       .dinner {
-        height: 30%;
-        // border: 0.25rem solid white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 25%;
+        border: 0.25rem solid white;
+        text-wrap: balance;
+
+        p {
+          text-align: center;
+        }
 
         button {
           width: 1.5rem;
@@ -108,7 +118,6 @@
         align-items: center;
 
         .addCard {
-          position: relative;
           width: 75%;
           max-height: 75vh;
           // height: max-content;
@@ -123,7 +132,7 @@
           overflow-x: hidden;
 
           p {
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
             line-height: 1.5rem;
 
             span {
@@ -191,13 +200,12 @@
               width: 10rem;
               display: flex;
               flex-direction: column;
-              // align-items: center;
               justify-content: space-between;
               padding-top: 0.5rem;
 
               p {
-                // width: 150%;
                 text-align: center;
+                text-wrap: balance;
                 margin: 0;
               }
 
@@ -261,9 +269,9 @@
           }
 
           .exitbtn {
-            position: absolute;
+            position: fixed;
             top: 1rem;
-            right: 1rem;
+            right: 2rem;
             width: 1.5rem;
             height: 1.5rem;
             border-radius: 50%;
@@ -281,30 +289,33 @@
             }
           }
 
+          .addFromFav {
+            width: 30%;
+            line-height: 1.5rem;
+            padding: 0.25rem 0.5rem;
+            border-radius: 0.5rem 0 0.5rem;
+            border: 2px solid black;
+            background-color: #238c41;
+            color: #d0f4da;
+
+            &:hover {
+              background-color: #2db353;
+              cursor: pointer;
+            }
+          }
+
           &::-webkit-scrollbar {
             width: 0.5em;
           }
 
           &::-webkit-scrollbar-track {
             background-color: transparent;
-            margin: 1rem 0 2.5rem;
+            margin: 6rem 0 2.5rem;
           }
 
           &::-webkit-scrollbar-thumb {
             background-color: #29a64d;
-            border-radius: 0.25rem;
-            height: 2rem;
           }
-
-          // &::-webkit-scrollbar-track-piece:start {
-          //   background: transparent;
-          //   margin-top: 2rem;
-          // }
-
-          // &::-webkit-scrollbar-track-piece:end {
-          //   background: transparent;
-          //   margin-bottom: 2rem;
-          // }
         }
       }
     }
