--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,20 @@
 
 body {
   width: 100vw;
+  height: 100%;
   overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 0.75em;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #d0f4da;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #29a64d;
+  }
 }
 
 #root {
