--- a/src/pages/MealPlanner/MealPlanner.module.scss
+++ b/src/pages/MealPlanner/MealPlanner.module.scss
@@ -1,10 +1,10 @@
 .mealplanner {
   width: 100%;
-  min-height: calc(100vh - 3rem);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 0 2rem;
   position: relative;
 
   h1 {
