--- a/src/pages/Search/Search.module.scss
+++ b/src/pages/Search/Search.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: center;
   width: 100%;
-  padding: 1rem 1.5rem;
+  padding: 0.75rem 1.5rem;
 
   .searchbar {
     display: flex;
@@ -17,6 +17,8 @@
       padding: 0.5rem 0;
       width: 50%;
       text-align: center;
+      border: 1px solid black;
+      border-radius: 0.5rem 0 0.5rem;
     }
 
     label {
@@ -28,8 +30,8 @@
   .filters {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 100vw;
+    justify-content: space-between;
+    width: 50%;
   }
 
   .getRecipes {
