--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -121,19 +121,25 @@
           position: relative;
           text-align: center;
           color: #000000;
-          min-height: 75%;
+          min-height: 100%;
           margin-bottom: 0.5rem;
+          background-repeat: no-repeat;
           background-position: center;
+          background-size: 110%;
           color: white;
           border-radius: 1rem 0 1rem;
+          overflow: hidden;
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
           p {
             width: 100%;
-            background-color: #29a64c4d;
+            background-color: rgba(41, 166, 76, 0.4);
             user-select: none;
-            padding: 0 0.25rem;
+            padding: 0.25rem;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             margin-top: 1.25rem;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5),
+              0 -2px 15px rgba(0, 0, 0, 0.5);
           }
 
           .deleteFromMP {
@@ -216,6 +222,7 @@
           border-radius: 2rem 0 2rem;
           overflow: scroll;
           overflow-x: hidden;
+          position: relative;
 
           p {
             margin-bottom: 1rem;
@@ -398,23 +405,19 @@
           }
 
           .exitbtn {
-            position: fixed;
+            position: absolute;
             top: 1rem;
             right: 2rem;
-            width: 1.5rem;
-            height: 1.5rem;
-            border-radius: 50%;
+            width: 2rem;
+            height: 2rem;
             border: none;
-            outline: 1px dashed black;
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: transparent;
 
             &:hover {
               cursor: pointer;
-              outline: 1px solid black;
-              transform: scale(1.2);
-              font-weight: bold;
             }
           }
 
