--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -159,6 +159,7 @@
           align-items: center;
           font-size: 1.5rem;
           margin-top: auto;
+          user-select: none;
 
           &:hover {
             cursor: pointer;
@@ -282,6 +283,7 @@
         font-weight: bold;
         padding: 0.15rem 0.25rem 0;
         margin-right: 1.25rem;
+        user-select: none;
 
         &:hover {
           cursor: pointer;
