--- a/src/pages/ShopingList/ShopingList.module.scss
+++ b/src/pages/ShopingList/ShopingList.module.scss
@@ -36,6 +36,7 @@
   }
 
   .fromToDate {
+    display: flex;
     position: relative;
     align-self: center;
     font-size: 2rem;
@@ -59,16 +60,17 @@
 
     .delSL {
       position: absolute;
-      right: -2rem;
-      width: 2rem;
-      height: 2rem;
+      align-self: center;
+      right: -1.5rem;
+      width: 1.5rem;
+      height: 1.5rem;
       border: none;
       background-color: transparent;
       &:hover {
         cursor: pointer;
         svg {
           path {
-            stroke: #29a64d;
+            stroke: red;
           }
         }
       }
