--- a/CLIENT/src/index.css
+++ b/CLIENT/src/index.css
@@ -8,18 +8,20 @@ body {
   width: 100vw;
   height: 100%;
   overflow-x: hidden;
+  font-family: monospace;
 
   &::-webkit-scrollbar {
+    display: none;
     width: 0.75em;
   }
 
-  &::-webkit-scrollbar-track {
+  /* &::-webkit-scrollbar-track {
     background-color: #d0f4da;
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: #29a64d;
-  }
+  } */
 }
 
 #root {
@@ -28,7 +30,7 @@ body {
   align-items: center;
   /* justify-content: center; */
   background-color: #d0f4da;
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
 }
 
