--- a/CLIENT/src/pages/Community/Community.module.scss
+++ b/CLIENT/src/pages/Community/Community.module.scss
@@ -6,12 +6,66 @@
   flex-direction: column;
   align-items: center;
 
-  .imageset {
-    width: 80%;
+  .upload {
+    width: 50%;
+    min-width: 500px;
+    border-radius: 2rem 0 2rem;
+    background-color: white;
+    margin: 2rem 0;
+    padding: 1rem;
+  }
 
-    img {
-      // width: 10rem;
-      height: 10rem;
+  .uploaded {
+    width: 100%;
+    padding: 1rem 5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid;
+    border-image: linear-gradient(
+        to right,
+        transparent 10%,
+        #29a64d 90%,
+        transparent 10%
+      )
+      1;
+    .imageset {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      .recipe {
+        font-size: 2rem;
+        text-align: center;
+        padding: 1rem;
+
+        .title {
+          font-size: 3rem;
+          font-weight: bold;
+        }
+        .user {
+          font-size: 1rem;
+        }
+      }
+
+      .images {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+        img {
+          width: 24%;
+          aspect-ratio: 1;
+          padding: 0.5rem;
+          border-radius: 2rem 0 2rem 0;
+        }
+      }
+
+      .description {
+        padding: 1rem 2rem;
+      }
     }
   }
 }
